2016-05-28  SilverNexus
	* search.c: Extract the needle length checks from the case-insensitive search
	  function and put them outside the function. Use recent macros to ease
	  implementation.
	  Make macros out of the search decision groups for maintainability.
	* fileperuser_search.c: Split fileperuser_memcasemem() into fileperuser_memcasemem_boyer(),
	  fileperuser_memcasemem_brute(), and fileperuser_memcasemem_single().
	* fileperuser_search.h: Add function prototypes for new split search functions.

2016-05-26  SilverNexus
	* search.c: Define start_line and end_line as const char * in multi-search.
	  Fix a condition structure bug when HAVE_MMAP is not defined.
	* jump_table.c: Loop optimization.

2016-05-25  SilverNexus
	* main.c: Made case insensitive searches convert all characters to lowercase
	  before building the jump table or searching.
	  Also, remove the search timer. It was too granular and generally unhelpful.
	* fileperuser_search.c: Removed conversion of the character in needle to
	  lowercase and added documentation indicating that the function expects
	  an all-lowercase needle.
	* jump_table.c: Removed conversion of search string character to lowercase.
	  Added documentation to indicate the function expected a lowercased needle
	  on case-insensitive searches.
	* settings.h: Moved the min jump table defines to jump_table.h.
	  Adjusted dir_list functions to not void return type.
	* jump_table.h: Add min jump table defines from settings.h.
	* dir_list.c: Update return information for init_dir_node() to indicate
	  it cannot return null.
	* settings.c: Removed return values from dir_list functions and updated
	  documentation to reflect this change.
	* dir_list.h: Merge typedef into struct declaration.
	* parseArgs.c: Remove checks to ensure min_print_level and min_log_level
	  received numeric values -- atoi returns 0 on non-numeric input.
	  Refactored argument parsing to reduce calls to strcmp().